--- a/discode-web/src/app/home/chat-room/chat-room.component.scss
+++ b/discode-web/src/app/home/chat-room/chat-room.component.scss
@@ -12,7 +12,7 @@
     height: 85%;
     max-height: 85%;
     min-width: 100%;
-    margin-bottom: 10px; ;
+    margin-bottom: 10px;
 }
 
 .chat-room-messages {
@@ -75,20 +75,27 @@ hr.solid {
         width: 90%;
     }
 
-    .send-message {
+    div > button {
         height: 40px;
-        width: 90px;
-        margin: 15px;
+        width: 130px;
+        margin-left: 15px;
+        margin-top: 5px;
+        margin-bottom: 5px;
     }
 }
 
-.code-modal{
-    padding: 0 !important; 
-    width: 100%;
-    height: 100%;
-
-    .modal-title{
-        text-align: center;
+.code-modal {
+    position: absolute;
+    padding: 0 !important;
+    width: 50%;
+    height: 47%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 4px;
+    box-shadow: 0 4px 40px 0 rgba(0, 0, 0, 0.2), 0 6px 40px 0 rgba(0, 0, 0, 0.19);
+    * {
+        border: none;
     }
 
     .modal-dialog {
@@ -96,27 +103,38 @@ hr.solid {
         max-width: none;
         height: 100%;
         margin: 0;
-      }
-      
-      .modal-content {
+    }
+
+    .modal-content {
         height: 100%;
         border: 0;
         border-radius: 0;
-      }
+    }
 
-      .modal-body {
+    .modal-body {
         height: 100%;
         overflow-y: auto;
-      }
+    }
 
-      .code{
-          padding-left: 10px;
-        height: 100%;
-      }
-
-    .code-area{
+    .code-area {
         width: 100%;
         height: 100%;
     }
-}
 
+    .modal-header {
+        align-items: center;
+    }
+
+    .language-selector {
+        max-width: 100px;
+        max-height: 40px;
+    }
+
+    .footer-btns > * {
+        height: 40px;
+        width: 130px;
+        margin-left: 15px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+}
