--- a/discode-web/src/app/home/message/message.component.html
+++ b/discode-web/src/app/home/message/message.component.html
@@ -21,9 +21,13 @@
                     <span class="d-flex-row">
                         <select class="form-select select-discode-green language-selector" [ngModel]="mode" (ngModelChange)="onChange($event)">
                             <option value="" selected [disabled]="true">Select a language</option>
-                            <option *ngFor="let language of languages" value="{{language}}">{{language}}</option>
+                            <option *ngFor="let language of languages" value="{{language.name}}">{{language.displayName}}</option>
                         </select>
-                        <button class="btn btn-primary btn-discode-green" [disabled]="mode == ''" type="button" (click)="runCode()">Run</button>
+                        <button class="btn btn-primary btn-discode-green" [disabled]="mode == ''" type="button" (click)="runCode()">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="12" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
+                                <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
+                              </svg>
+                        </button>
                     </span>
                     <pre class='code-content'><code> {{message.codeOutput}}</code></pre>
                 </div>
