--- a/discode-web/src/app/home/message/message.component.html
+++ b/discode-web/src/app/home/message/message.component.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div *ngIf="isCode()">
-                <pre class='code-content'><code>{{code}}</code></pre>
+                <pre class='code-content'><code [highlight]="code!">{{code}}</code></pre>
                 <div class="code-options d-flex">
                     <span class="d-flex-row">
                         <select class="form-select select-discode-green language-selector" [ngModel]="mode" (ngModelChange)="onChange($event)">
