--- a/discode-web/src/styles.scss
+++ b/discode-web/src/styles.scss
@@ -2,6 +2,7 @@
 @import "~mdb-ui-kit/css/mdb.dark.min.css";
 @import '~codemirror/lib/codemirror';
 @import '~codemirror/theme/material';
+@import '~highlight.js/styles/github-dark-dimmed.css';
 
 $discode-darkest: #23272a;
 $discode-dark: #2c2f33;
