--- a/discode-web/src/app/home/message/message.component.scss
+++ b/discode-web/src/app/home/message/message.component.scss
@@ -1,4 +1,8 @@
-@import "src/styles.scss";
+@import "src/colors.scss";
+
+code, code * {
+    font-size: medium !important;
+}
 
 .message-box {
     border-radius: 5px;
