--- a/discode-web/src/app/shared/components/header/header.component.scss
+++ b/discode-web/src/app/shared/components/header/header.component.scss
@@ -1,6 +1,11 @@
 .right-span {
     position: fixed;
     right: 0;
+
+    button {
+        width: 45px;
+        height: 45px;
+    }
 }
 
 .discode-header {
