--- a/discode-web/src/app/home/home.component.scss
+++ b/discode-web/src/app/home/home.component.scss
@@ -1,56 +1,143 @@
+@import "src/colors.scss";
+
 .side-nav {
-    max-width: 200px;
-    min-width: 100px;
-    height: 90vh;
-    margin: 10px 10px 0px 10px;
+    max-width: 300px;
+    min-width: 300px;
+    height: 93vh;
+    margin: 0px 10px 0px 10px;
     align-items: center;
     border-radius: 4px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    direction: rtl;
+
+    * {
+        direction: ltr;
+    }
 }
 
-.create-chat {
-    margin-top: 20px;
-    border: none;
-    border-radius: 100%;
-    padding: 20px;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
+.h-divider {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 100%;
+    border-top: 2.5px solid $discode-grey;
+    border-radius: 1px;
 }
 
 .chats {
-    margin-top: 20px;
-    margin-bottom: 20px;
     align-items: center;
+
+    * {
+        text-align: center;
+        align-items: center;
+    }
+
+    div {
+        border-radius: 4px;
+    }
+
+    > div > * {
+        margin: 8px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        padding: 5px;
+        border-radius: 4px;
+    }
+
+    > *:hover {
+        background-color: $discode-dark;
+        color: white;
+
+        .chat-icon {
+            border-radius: 30% !important;
+            background-color: $discode-dark-blue !important;
+            color: white;
+        }
+
+        .chat-leave-icon {
+            visibility: visible;
+            cursor: pointer;
+        }
+    }
+}
+
+.new-chat-container {
+    border-radius: 4px;
+    padding: 5px;
+    margin-top: 5px;
     width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    overflow: auto;
+
+    > * {
+        margin: 5px;
+    }
 }
 
-.chat-btn {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    max-width: 50%;
-    border-radius: 10px;
-    max-height: 10%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    
+.new-chat-container:hover {
+    background-color: $discode-dark;
+    color: white;
+
+    .create-chat {
+        border-radius: 30% !important;
+        color: white;
+        background-color: $discode-green !important;
+    }
 }
 
-.center{
+.create-chat {
+    border: none;
+    border-radius: 100%;
+    padding: 15px;
+    color: $discode-green;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    transition: border-radius 0.3s;
+}
+
+.lbl-create-chat {
+    align-self: center;
+    text-align: center;
+    font-size: large;
+    font-weight: bold;
+    width: 50%;
+    cursor: pointer;
+}
+
+.chat-icon {
+    width: 50px;
+    height: 50px;
+    border: none;
+    border-radius: 100% !important;
+    background-color: $discode-blue;
+    color: $discode-darkest;
+    transition: border-radius 0.3s;
+}
+
+.chat-link {
+    cursor: pointer;
+    font-size: medium;
+    max-width: 140px;
+    min-width: 140px;
+    text-align: start !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+
+.chat-leave-icon {
+    visibility: hidden;
+}
+
+.center {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
 
-    img{
-        max-width:50%;
-        max-height:50%;
+    img {
+        max-width: 50%;
+        max-height: 50%;
         min-width: 200px;
         min-height: 200px;
     }
@@ -59,4 +146,3 @@
 .chat-room-container {
     max-height: 90vh;
 }
-
