--- a/discode-web/src/app/app.component.html
+++ b/discode-web/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="min-vh-100 min-vw-100 flex-column bg-discode-dark" id="app-root">
-    <app-header></app-header>
-    <router-outlet></router-outlet>
+    <app-header [isAuthenticated]="isAuthenticated" (notifyParent)="getNotification($event)"></app-header>
+    <router-outlet (activate)="componentAdded($event)"></router-outlet>
 </div>
