--- a/discode-web/src/app/home/chat-room/chat-room.component.html
+++ b/discode-web/src/app/home/chat-room/chat-room.component.html
@@ -3,7 +3,7 @@
         aria-expanded="false" style="font-size: 16px;">
         {{chatName}}
     </button>
-    <ul ngbDropdownMenu aria-labelledby="dropdownMenuButton1" class="bg-discode-darker">
+    <ul ngbDropdownMenu aria-labelledby="dropdownMenuButton1" class="bg-discode-darker" *ngIf="isAlreadyMember(userId) === 'OWNER'">
         <li><a class="menu-list" ngbDropdownItem (click)="openAddMemberModal()">Add member</a></li>
         <li><a class="menu-list" ngbDropdownItem (click)="openDeleteMemberModal()">Remove member</a></li>
         <li><a class="menu-list" ngbDropdownItem (click)="deleteChat()">Delete chat</a></li>
@@ -80,7 +80,7 @@
         <div class="d-flex chat-room-members bg-discode-darker">
             <ul class='d-flex chat-room-members-list'>
                 <div *ngFor="let member of chatMembers">
-                    <li *ngIf="member.status !== 'LEFT'">{{member.firstName + " " + member.lastName}}</li>
+                    <li *ngIf="member.status !== 'LEFT'">{{member.username}}</li>
                 </div>
             </ul>
         </div>
@@ -90,7 +90,7 @@
         <form class="form-discode-blue send-message-form" role="sendMessage" [formGroup]="messageFormGroup">
             <div class="mb-4 border-primary message-box">
                 <textarea name="sendMessage" rows="3" cols="60" name="message" class="form-control" placeholder="..."
-                    style="resize: none;" formControlName="message"></textarea>
+                    style="resize: none;" formControlName="message" (keyup.enter) = "sendMessage()"></textarea>
             </div>
 
             <div class="d-flex">
